# win-cuda-opencv-autobuild

./: CMakeLists.txt  README.md
scripts/: build_opencv.bat  generate_solution.bat  install_tools.bat  setup_cuda_environment.bat
src/: main.cpp
